OBPIH-5207 Fix crowdin translations on Dashboard - Add missing translations for Dashboards sidebar items - Add missing translation For labels on Archive indicators, save config etc. - Fix truncated label causing crowding not to translate it properly - Modify indicator filter component option label rendering to instead accept arguments in the label for more control on the order of words

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -487,6 +487,10 @@ a.disabled {
   color: $gray-delta;
 }
 
+.text-align-left {
+  text-align: left;
+}
+
 .selected {
   font-weight: bold;
 }
